--- a/Projeto Loja Games.csproj
+++ b/Projeto Loja Games.csproj
@@ -61,11 +61,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Action.cs">
+    <Compile Include="Jogo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Action.Designer.cs">
-      <DependentUpon>Action.cs</DependentUpon>
+    <Compile Include="Jogo.Designer.cs">
+      <DependentUpon>Jogo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ListaJogos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ListaJogos.Designer.cs">
+      <DependentUpon>ListaJogos.cs</DependentUpon>
     </Compile>
     <Compile Include="alteracoesadm.cs">
       <SubType>Form</SubType>
@@ -73,41 +79,17 @@
     <Compile Include="alteracoesadm.Designer.cs">
       <DependentUpon>alteracoesadm.cs</DependentUpon>
     </Compile>
-    <Compile Include="aventura.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="aventura.Designer.cs">
-      <DependentUpon>aventura.cs</DependentUpon>
-    </Compile>
     <Compile Include="Cadastro.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Cadastro.Designer.cs">
       <DependentUpon>Cadastro.cs</DependentUpon>
     </Compile>
-    <Compile Include="dbacao.cs">
+    <Compile Include="dbadm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="dbacao.Designer.cs">
-      <DependentUpon>dbacao.cs</DependentUpon>
-    </Compile>
-    <Compile Include="dbaventura.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="dbaventura.Designer.cs">
-      <DependentUpon>dbaventura.cs</DependentUpon>
-    </Compile>
-    <Compile Include="dbrpg.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="dbrpg.Designer.cs">
-      <DependentUpon>dbrpg.cs</DependentUpon>
-    </Compile>
-    <Compile Include="dbterror.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="dbterror.Designer.cs">
-      <DependentUpon>dbterror.cs</DependentUpon>
+    <Compile Include="dbadm.Designer.cs">
+      <DependentUpon>dbadm.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -135,41 +117,20 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="rpg.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="rpg.Designer.cs">
-      <DependentUpon>rpg.cs</DependentUpon>
-    </Compile>
-    <Compile Include="terror.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="terror.Designer.cs">
-      <DependentUpon>terror.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="Action.resx">
-      <DependentUpon>Action.cs</DependentUpon>
+    <EmbeddedResource Include="Jogo.resx">
+      <DependentUpon>Jogo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ListaJogos.resx">
+      <DependentUpon>ListaJogos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="alteracoesadm.resx">
       <DependentUpon>alteracoesadm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="aventura.resx">
-      <DependentUpon>aventura.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Cadastro.resx">
       <DependentUpon>Cadastro.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dbacao.resx">
-      <DependentUpon>dbacao.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="dbaventura.resx">
-      <DependentUpon>dbaventura.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="dbrpg.resx">
-      <DependentUpon>dbrpg.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="dbterror.resx">
-      <DependentUpon>dbterror.cs</DependentUpon>
+    <EmbeddedResource Include="dbadm.resx">
+      <DependentUpon>dbadm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -192,12 +153,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="rpg.resx">
-      <DependentUpon>rpg.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="terror.resx">
-      <DependentUpon>terror.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
