--- a/Projeto Loja Games.csproj
+++ b/Projeto Loja Games.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="pegarnome.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Jogo.resx">
