--- a/Projeto Loja Games.csproj
+++ b/Projeto Loja Games.csproj
@@ -61,6 +61,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Conta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Conta.Designer.cs">
+      <DependentUpon>Conta.cs</DependentUpon>
+    </Compile>
     <Compile Include="FimCompra.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -136,6 +142,9 @@
     <Compile Include="pegarnome.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Conta.resx">
+      <DependentUpon>Conta.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FimCompra.resx">
       <DependentUpon>FimCompra.cs</DependentUpon>
     </EmbeddedResource>
